<resources>
    <string name="app_name">E-Commerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="forgot">Forgot</string>
    <string name="email">EMAIL</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="username_email">USERNAME / EMAIL</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_the_email">Enter the email address you used to create your account and we will email you a link to reset your password</string>
    <string name="send_email">send email</string>
    <string name="notifications">Notifications</string>
    <string name="categories">Categories</string>
    <string name="apparel">Apparel</string>
    <string name="beauty">Beauty</string>
    <string name="shoes">Shoes</string>
    <string name="see_all">See All</string>
    <string name="latest">Latest</string>
    <string name="electronics">Electronics</string>
    <string name="furniture">Furniture</string>
    <string name="home">Home</string>
    <string name="stationary">Stationary</string>
    <string name="allcategories">AllCategories</string>
    <string name="messages">Messages</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="see_more">See more</string>
    <string name="summer_clothes">For all your summer clothing needs</string>
    <string name="ankle_boots">Ankle Boots</string>
    <string name="cotton_dress">Cotton Dress</string>
    <string name="pattern_dress">Pattern Dress</string>
    <string name="floral_dress">floral Dress</string>
    <string name="yellow_bag">JJ’s Backpack</string>
    <string name="blue_bag">Armor Blu</string>
    <string name="green_bag">Action Sports</string>
    <string name="grey_jacket">Grey Jacket</string>
    <string name="red_jacket">Faux Sued Ja…</string>
    <string name="blue_jacket">Blue &amp; Whit…</string>
    <string name="back_pack">Back pack</string>
    <string name="red_scarf">Red Scarf</string>
    <string name="_49_99">$49.99</string>
    <string name="clear">clear</string>
    <string name="recently_viewed">RECENTLY VIEWED</string>
    <string name="search_something">Search Something</string>
    <string name="refine_results">refine results</string>
    <string name="view">View</string>
    <string name="thumbnails">Thumbnails</string>
    <string name="category">Category</string>
    <string name="men_s_apparel">Men’s Apparel</string>
    <string name="apply_filters">APPLY FILTERS</string>
    <string name="price_range">Price Range</string>
    <string name="_0_30">$0 -$30</string>
    <string name="brand">Brand</string>
    <string name="all_brands">All Brands</string>
    <string name="color">Color</string>
    <string name="r_neck">Round Neck Shirt</string>
    <string name="v_neck_p">V Neck Polo Shirt</string>
    <string name="v_neck_l">V Neck Shirt - Lime</string>
    <string name="v_neck_pi">V Neck Shirt - Pink</string>
    <string name="r_neck_bas">Round Neck Shirt - Basic</string>
    <string name="chemise">Chemise - </string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="share_this">Share This</string>
    <string name="products">Products</string>
    <string name="reviews">Reviews</string>
    <string name="details">Details</string>
    <string name="_7_hot_pink">7,Hot Pink</string>
    <string name="total">Total</string>
    <string name="_81_57">$81.57</string>
    <string name="free_domestic_shipping">Free Domestic Shipping</string>
    <string name="checkout">Checkout</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="address_text">No 123, Sub Street, Main Street, City Name, Province, Country</string>
    <string name="payment_method">Payment Method</string>
    <string name="items">items</string>
    <string name="order_placed">Order Placed!</string>
    <string name="order_placed_text">Your order was placed successfully. For more details, check All My Orders page under Profile tab</string>
    <string name="my_orders">MY ORDERS</string>
    <string name="currency">Currency</string>
    <string name="usd">usd</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="log_out">log out</string>
    <string name="examble_email_com">examble@email.com</string>
    <string name="edit_profile">edit profile</string>
    <string name="all_my_orders">All My Orders</string>
    <string name="pending_shipments">Pending Shipments</string>
    <string name="pending_payments">Pending Payments</string>
    <string name="finished_orders">Finished Orders</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="customer_support">Customer Support</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="make_a_suggestion">Make a Suggestion</string>
    <string name="ss">SS</string>
    <string name="message_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</string>
    <string name="smiley_s_store">Smiley’s Store</string>
    <string name="active">Active</string>
    <string name="type_your_message">Type your message...</string>
    <string name="trending">Trending</string>
    <string name="bags">Bags</string>
    <string name="jackets">Jackets</string>
    <string name="jd">JD</string>
    <string name="select_color">SELECT COLOR</string>
    <string name="select_size_us">SELECT SIZE (US)</string>
    <string name="sku">SKU</string>
    <string name="lily_s_ankle_boots">Lily’s Ankle Boots</string>
    <string name="condition">CONDITION</string>
    <string name="material">MATERIAL</string>
    <string name="women_shoes">Women Shoes</string>
    <string name="fitting">FITTING</string>
    <string name="true_to_size">True To Size</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="shop">SHOP</string>
    <string name="now">NOW</string>
</resources>