<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F6F8"
        tools:context=".ui.cart.CheckoutActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_108sdp"
            android:lines="5"
            android:padding="@dimen/_15sdp"
            android:text="@string/address_text"
            android:textColor="#515C6F"
            android:textSize="@dimen/_15sdp"
            app:drawableEndCompat="@drawable/more_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shippingAddressTextV" />



        <TextView
            android:id="@+id/textPayment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_63sdp"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/payment_method"
            android:textAllCaps="true"
            android:textSize="@dimen/_15sdp"
            app:drawableEndCompat="@drawable/more_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="#1A515C6F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textPayment" />


        <TextView
            android:id="@+id/itemTextV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_15sdp"

            android:padding="@dimen/_5sdp"
            android:text="@string/items"
            android:textAllCaps="true"
            android:textColor="#80515C6F"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="#1A515C6F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <TextView
            android:id="@+id/allCategories_TextV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/neusa_next_std_bold"
            android:text="@string/checkout"
            android:textAllCaps="false"

            android:textColor="#515C6F"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/close"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="#F6F7F9"
            android:src="@drawable/close"
            app:layout_constraintBottom_toTopOf="@+id/allCategories_TextV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shippingAddressTextV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/neusa_regular"
            android:padding="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/shipping_address"
            android:textColor="#80727C8E"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/allCategories_TextV" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/totalTextV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neusa_next_std_bold"
                android:padding="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/total"
                android:textColor="#80515C6F"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/amountTextV"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/amountTextV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/neusa_next_std_bold"
                android:text="@string/_81_57"
                android:textColor="#515C6F"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/totalTextV" />

            <TextView
                android:id="@+id/shippingTextV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neusa_regular"
                android:padding="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/free_domestic_shipping"
                android:textColor="#727C8E"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/amountTextV"
                app:layout_constraintTop_toBottomOf="@id/amountTextV" />

            <TextView
                android:id="@+id/placeOrder_Btn"
                android:layout_width="@dimen/_175sdp"
                android:layout_height="@dimen/_70sdp"
                android:background="@drawable/checkout_btn"
                android:elevation="@dimen/_6sdp"
                android:gravity="center"
                android:paddingEnd="@dimen/_20sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:text="@string/place_order"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="#1A515C6F"
            app:layout_constraintBottom_toTopOf="@+id/promoCodeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/promoCodeText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:gravity="center_vertical"
            android:text="@string/add_promo_code"
            android:textColor="@color/rose"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/more_small"
            app:drawableStartCompat="@drawable/asset1"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>